5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1662_1396.log
== TEST (2019-04-15 15:04:29) 
-- CODE:
consumo = float(input("valor consumido: "))

if consumo <= 300.0:
	gorjeta = consumo + (consumo/10)
	print(round(gorjeta, 2))
else:
   gorjeta = consumo + ((consumo/100)*6)
	print(input(round(gorjeta, 2)))
-- ERROR:
File "XXXX", line 8
    print(input(round(gorjeta, 2)))
                                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:43) 
-- CODE:
consumo = float(input("valor consumido: "))

if consumo <= 300.0:
	gorjeta = consumo + (consumo/10)
	print(round(gorjeta, 2))
else:
   gorjeta = consumo + ((consumo/100)*6)
	print(input(round(gorjeta, 2))
-- ERROR:
File "XXXX", line 8
    print(input(round(gorjeta, 2))
                                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:04:52) 
-- CODE:
consumo = float(input("valor consumido: "))

if consumo <= 300.0:
	gorjeta = consumo + (consumo/10)
	print(round(gorjeta, 2))
else:
   gorjeta = consumo + ((consumo/100)*6)
	print(round(gorjeta, 2))
-- ERROR:
File "XXXX", line 8
    print(round(gorjeta, 2))
                           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:05:14) 
-- CODE:
consumo = float(input("valor consumido: "))

if consumo <= 300.0:
	gorjeta = consumo + (consumo/10)
	print(round(gorjeta, 2))
else:
	gorjeta = consumo + ((consumo/100)*6)
	print(round(gorjeta, 2))
-- EXECUTION TIME:
0.173936
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
387.06
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
530.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
